# m-schindler.github.io

./: README.md  index.html
avato/: index.html
avato/2Dperiodic/: CMakeLists.txt  Cut_cell_2.h  Periodic_2_dual_triangulations_2.h  Periodic_triangulation_cover_iterators_2.h  Periodic_triangulation_ds_circulators_2.h  README  available_volumes.cpp  available_volumes_after_takeout.cpp  read_dumpfile.h  tools.h  unit_tests.cpp
avato/2Dperiodic/patches/: patch_for_CGAL4.4
incl/: main.css
priv/: index.html  vpn.espci.fr.ovpn  vpn.gulliver.espci.fr.ovpn
priv/NetworkManager/: vpn.espci.fr-ca.pem  vpn.espci.fr.nmconnection  vpn.gulliver.espci.fr.nmconnection
priv/OpenVPN/: vpn.espci.fr.ovpn  vpn.gulliver.espci.fr.ovpn
talks/: 2025-05-27_VoyageGulliver_MSchindler_prose.txt  index.html
